<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/change_pwd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_c9141d"
         >

        <TextView
            android:id="@+id/change_pwd_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/title_close_btn_white"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/change_pwd_back_view"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/change_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/change_pwd_title"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/change_pwd_con"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/con_new_password"
        android:layout_below="@+id/change_pwd_new"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/change_pwd_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/change_pwd_con"
        android:background="@color/color_c9141d"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/submit"
        android:textColor="@color/white" />

</RelativeLayout>