<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_c9141d">

        <TextView
            android:id="@+id/user_setting_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_back_btn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_setting_back_view"
            android:textSize="18sp"
            android:text="@string/user_setting"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/user_setting_change_userphoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/change_user_photo"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_cdcdcd"
        />

    <TextView
        android:id="@+id/user_setting_change_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/change_username"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_cdcdcd"
        />

    <TextView
        android:id="@+id/user_setting_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/arrow_right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/change_password"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_cdcdcd"
        />


    <TextView
        android:id="@+id/user_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/loginout"
        android:gravity="center_horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:layout_gravity="center_vertical"
        android:background="@color/color_c9141d"
        android:textColor="@color/white"
        android:textSize="18sp"/>

</LinearLayout>