<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/add_question_titlebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/add_question_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_close_btn"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_question"
                    android:layout_toRightOf="@+id/add_question_back"
                    android:layout_centerVertical="true"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/color_333333"/>

                <TextView
                    android:id="@+id/add_question_nextstep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/next_step"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/color_333333"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_question_titlebar"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/add_question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_question_title"
                    android:maxLines="5"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_bfbfbf"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/add_question_title"
                    android:background="@drawable/add_answer_line_selector"/>

                <EditText
                    android:id="@+id/add_question_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_question_content"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_bfbfbf"
                    android:textSize="16sp"
                    android:layout_below="@+id/add_question_title"
                    android:paddingTop="20dp"/>

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>

</LinearLayout>