<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/start_class_titlebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/start_class_back_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/title_close_btn"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/start_class_back_view"
                    android:text="@string/online_status"
                    android:textColor="@color/color_333333"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/start_class_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_class_titlebar"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/start_class_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/start_class_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/start_class_pic"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="30dp"
                    android:text="ClassTitle"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_class_info"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"

                    android:background="@drawable/line_normal"
                    />

                <!--
                    时长
                    网址
                    密码
                    按钮
                -->
                <TextView
                    android:id="@+id/start_class_length_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_length"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_length_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/color_333333"
                    android:layout_toRightOf="@+id/start_class_length_info"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_url_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_url"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/start_class_length_info"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_url_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/start_class_length_info"
                    android:layout_toRightOf="@+id/start_class_url_info"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_key_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_key"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/start_class_url_info"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_key_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test"
                    android:textColor="@color/color_333333"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/start_class_url_info"
                    android:layout_toRightOf="@+id/start_class_key_info"
                    android:layout_marginLeft="10dp"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/start_class_startinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/start_class_key_view"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/color_cccccc"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:text="@string/start_info"
                    />

                <TextView
                    android:id="@+id/start_class_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_class"
                    android:textColor="@color/white"
                    android:layout_marginTop="50dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/start_class_startinfo"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/color_c9141d"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/end_class_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_class"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/start_class_btn"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@color/color_c9141d"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>