<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/choose_photo_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_c9141d">

        <TextView
            android:id="@+id/choose_photo_back_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_back_btn"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/choose_photo_back_view"
            android:textSize="18sp"
            android:text="@string/change_user_photo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/choose_photo_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/choose_photo_titlebar"
        android:src="@drawable/nopic" />

    <TextView
        android:id="@+id/choose_photo_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_photo_view"
        android:layout_marginTop="50dp"
        android:background="@color/color_c9141d"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/choose_photo_local" />

    <TextView
        android:id="@+id/choose_photo_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_photo_local"
        android:layout_marginTop="10dp"
        android:background="@color/color_c9141d"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/choose_photo_camera" />

</RelativeLayout>